[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/main/settings_menu.gd" type="Script" id=1]
[ext_resource path="res://resources/materials/blur_shader.tres" type="Material" id=2]
[ext_resource path="res://resources/themes/game_menu.tres" type="Theme" id=3]
[ext_resource path="res://resources/themes/game_menu_cursor.tres" type="StyleBox" id=4]

[node name="settings_menu" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="color_rect" type="ColorRect" parent="." index="0"]

material = ExtResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Material" ]

[node name="panel" type="Panel" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -366.0
margin_top = -370.0
margin_right = 366.0
margin_bottom = 368.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
theme = ExtResource( 3 )
_sections_unfolded = [ "Theme" ]

[node name="cursor" type="Panel" parent="panel" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 161.0
margin_top = 32.0
margin_right = 567.0
margin_bottom = 163.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/panel = ExtResource( 4 )
_sections_unfolded = [ "Material", "custom_styles" ]

[node name="items" type="Container" parent="panel" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="control" type="Button" parent="panel/items" index="0"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 2.0
margin_top = -365.0
margin_right = 2.0
margin_bottom = -174.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CONTROL"
flat = true
align = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="sound" type="Button" parent="panel/items" index="1"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -178.0
margin_bottom = 8.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "SOUND"
flat = true
align = 1

[node name="display" type="Button" parent="panel/items" index="2"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 2.0
margin_top = 3.0
margin_right = 2.0
margin_bottom = 174.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "DISPLAY"
flat = true
align = 1

[node name="back" type="Button" parent="panel/items" index="3"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 192.0
margin_bottom = 371.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "BACK"
flat = true
align = 1

[connection signal="pressed" from="panel/items/control" to="." method="_on_control_pressed"]

[connection signal="pressed" from="panel/items/sound" to="." method="_on_sound_pressed"]

[connection signal="pressed" from="panel/items/display" to="." method="_on_display_pressed"]

[connection signal="pressed" from="panel/items/back" to="." method="_on_back_pressed"]


